<resources>
    <string name="app_name">HydroWatch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Asen Dotsinski</string>
    <string name="nav_header_subtitle">a.dotsinski@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_water_counter">Water counter</string>
    <string name="menu_usage">Statistics</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_medals">Medals</string>
</resources>