<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="?android:attr/textSelectHandle"
            android:title="@string/menu_usage" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_friends" />
        <item
            android:id="@+id/nav_medals"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/menu_medals" />
    </group>
</menu>