<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hydrowatch.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hydrowatch.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_water_counter"
        android:name="com.example.hydrowatch.ui.waterCounter.WaterCounterFragment"
        android:label="@string/menu_water_counter"
        tools:layout="@layout/fragment_water_counter" />

    <fragment
        android:id="@+id/nav_friends"
        android:name="com.example.hydrowatch.ui.friends.FriendsFragment"
        android:label="Friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/nav_medals"
        android:name="com.example.hydrowatch.ui.medals.MedalsFragment"
        android:label="Medals"
        tools:layout="@layout/fragment_medals" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.hydrowatch.ui.statistics.StatisticsFragment"
        android:label="Statistics"
        tools:layout="@layout/fragment_statistics" />
</navigation>